<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffffff"
    style="@style/LogInFont"
    android:clickable="false">


    <TextView
        style="@style/LogInFont"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Sign Up"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <!--USERNAME-->
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/LogInFont"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/title" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_edit"
        style="@style/LogInFont"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/username"
        android:layout_marginTop="30dp" />

    <!--Password-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/username_edit"
        android:layout_alignLeft="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/LogInFont"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        style="@style/LogInFont"
        android:id="@+id/password_edit"
        android:layout_below="@+id/username_edit"
        android:layout_toRightOf="@+id/password"/>

    <!--Email-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="6dp"
        android:id="@+id/email"
        android:layout_below="@+id/password_edit"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        style="@style/LogInFont"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        style="@style/LogInFont"
        android:id="@+id/email_edit"
        android:layout_below="@+id/password_edit"
        android:layout_toRightOf="@+id/email"/>

    <!--Phone-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/phone_number"
        android:layout_below="@+id/email_edit"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        style="@style/LogInFont"
        android:layout_marginTop="6dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        style="@style/LogInFont"
        android:id="@+id/phone_edit"
        android:layout_below="@+id/email_edit"
        android:layout_toRightOf="@+id/phone_number"/>

    <!--Sign Up Button-->
    <Button
        android:id="@+id/signupButton2"
        android:layout_below="@id/phone_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToHomepage"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>



