<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/jobboard_icon" />

    <TextView
        android:id="@+id/title"
        style="@style/LogInFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Job Board"
        android:textSize="26sp" />

    <!--USERNAME-->
    <TextView
        android:id="@+id/username"
        style="@style/LogInFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/usernameSignIn"
        style="@style/LogInFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/username"
        android:text="anupamalur" />

    <!--PASSWORD-->
    <TextView
        android:id="@+id/textView3"
        style="@style/LogInFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username"
        android:layout_marginTop="25dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordSignIn"
        style="@style/LogInFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/textView3"
        android:inputType="textPassword"
        android:text="anupam" />


    <Button
        android:id="@+id/signinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:onClick="validateLogIn"
        android:text="Sign In"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/signupButton"
        style="@style/LogInFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signinButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="goToSignUp"
        android:text="@string/sign_up"
        android:textSize="12dp" />


</RelativeLayout>

